feat: Enhance code beautification by adding support for TypeScript, XML, Python, Java, C#, C++, Go, Rust, PHP, Ruby, YAML, Markdown, and GraphQL; update language options in UI

--- a/public/index.html
+++ b/public/index.html
@@ -2244,12 +2244,25 @@
                 <div class="tool-body">
                     <div class="tool-options" style="margin-bottom:12px">
                         <label class="option-label">Language</label>
-                        <div class="preset-grid" data-tool="code-lang" style="grid-template-columns:repeat(5,1fr)">
+                        <div class="preset-grid" data-tool="code-lang" style="grid-template-columns:repeat(6,1fr)">
                             <button class="preset-btn active" data-val="javascript" onclick="selectPreset(this)"><span>JS</span></button>
+                            <button class="preset-btn" data-val="typescript" onclick="selectPreset(this)"><span>TS</span></button>
                             <button class="preset-btn" data-val="json" onclick="selectPreset(this)"><span>JSON</span></button>
-                            <button class="preset-btn" data-val="css" onclick="selectPreset(this)"><span>CSS</span></button>
                             <button class="preset-btn" data-val="html" onclick="selectPreset(this)"><span>HTML</span></button>
+                            <button class="preset-btn" data-val="css" onclick="selectPreset(this)"><span>CSS</span></button>
+                            <button class="preset-btn" data-val="xml" onclick="selectPreset(this)"><span>XML</span></button>
                             <button class="preset-btn" data-val="sql" onclick="selectPreset(this)"><span>SQL</span></button>
+                            <button class="preset-btn" data-val="python" onclick="selectPreset(this)"><span>Python</span></button>
+                            <button class="preset-btn" data-val="java" onclick="selectPreset(this)"><span>Java</span></button>
+                            <button class="preset-btn" data-val="csharp" onclick="selectPreset(this)"><span>C#</span></button>
+                            <button class="preset-btn" data-val="cpp" onclick="selectPreset(this)"><span>C++</span></button>
+                            <button class="preset-btn" data-val="php" onclick="selectPreset(this)"><span>PHP</span></button>
+                            <button class="preset-btn" data-val="ruby" onclick="selectPreset(this)"><span>Ruby</span></button>
+                            <button class="preset-btn" data-val="go" onclick="selectPreset(this)"><span>Go</span></button>
+                            <button class="preset-btn" data-val="rust" onclick="selectPreset(this)"><span>Rust</span></button>
+                            <button class="preset-btn" data-val="yaml" onclick="selectPreset(this)"><span>YAML</span></button>
+                            <button class="preset-btn" data-val="markdown" onclick="selectPreset(this)"><span>MD</span></button>
+                            <button class="preset-btn" data-val="graphql" onclick="selectPreset(this)"><span>GQL</span></button>
                         </div>
                     </div>
                     <div class="input-group" style="margin-bottom:12px">
