--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -346,84 +346,31 @@
                         <p>Drag an image, video, audio, or PDF anywhere on this website. LumaTools will detect the file type and suggest the right tools instantly.</p>
                     </div>
 
-                    <div class="landing-category-label">What&rsquo;s inside</div>
-                    <div class="landing-categories">
-                        <div class="landing-category-card cat-ai">
-                            <div class="landing-category-header">
-                                <div class="landing-category-icon"><i class="fas fa-brain"></i></div>
-                                <div>
-                                    <div class="landing-category-title">AI &amp; Study</div>
-                                    <div class="landing-category-desc">Groq-powered — flashcards, notes, quizzes from any content</div>
-                                </div>
-                            </div>
-                            <div class="landing-category-tools">
-                                <span class="landing-category-tool" onclick="switchTool('ai-study-notes')"><i class="fas fa-book-open"></i> Study Notes</span>
-                                <span class="landing-category-tool" onclick="switchTool('ai-flashcards')"><i class="fas fa-clone"></i> Flashcards</span>
-                                <span class="landing-category-tool" onclick="switchTool('ai-quiz')"><i class="fas fa-question-circle"></i> Practice Quiz</span>
-                                <span class="landing-category-tool" onclick="switchTool('ai-paraphrase')"><i class="fas fa-sync-alt"></i> Paraphraser</span>
-                                <span class="landing-category-tool" onclick="switchTool('mind-map')"><i class="fas fa-project-diagram"></i> Mind Map</span>
-                                <span class="landing-category-tool" onclick="switchTool('youtube-summary')"><i class="fab fa-youtube"></i> YouTube Summary</span>
-                                <span class="landing-category-tool" onclick="switchTool('citation-gen')"><i class="fas fa-quote-left"></i> Citation Gen</span>
-                            </div>
+                                        <div class="landing-features">
+                        <div class="landing-feature">
+                            <div class="landing-feature-icon"><i class="fas fa-wand-magic-sparkles"></i></div>
+                            <h3>Smart Drag &amp; Drop</h3>
+                            <p>Drop a file anywhere and a quick-action panel appears with every tool that matches your file type. No searching required.</p>
                         </div>
-                        <div class="landing-category-card cat-media">
-                            <div class="landing-category-header">
-                                <div class="landing-category-icon"><i class="fas fa-film"></i></div>
-                                <div>
-                                    <div class="landing-category-title">Media &amp; Video</div>
-                                    <div class="landing-category-desc">FFmpeg-powered conversion, compression and editing</div>
-                                </div>
-                            </div>
-                            <div class="landing-category-tools">
-                                <span class="landing-category-tool" onclick="switchTool('video-compress')"><i class="fas fa-file-video"></i> Compress</span>
-                                <span class="landing-category-tool" onclick="switchTool('video-trim')"><i class="fas fa-cut"></i> Trim</span>
-                                <span class="landing-category-tool" onclick="switchTool('video-convert')"><i class="fas fa-exchange-alt"></i> Convert</span>
-                                <span class="landing-category-tool" onclick="switchTool('video-to-gif')"><i class="fas fa-magic"></i> Video to GIF</span>
-                                <span class="landing-category-tool" onclick="switchTool('video-extract-audio')"><i class="fas fa-volume-up"></i> Extract Audio</span>
-                                <span class="landing-category-tool" onclick="switchTool('image-compress')"><i class="fas fa-compress-alt"></i> Image Compress</span>
-                                <span class="landing-category-tool" onclick="switchTool('downloader')"><i class="fas fa-download"></i> Downloader</span>
-                            </div>
+                        <div class="landing-feature">
+                            <div class="landing-feature-icon"><i class="fas fa-layer-group"></i></div>
+                            <h3>Batch Processing</h3>
+                            <p>Drop multiple files at once. LumaTools processes them in a queue and bundles the results into a single .zip download.</p>
                         </div>
-                        <div class="landing-category-card cat-docs">
-                            <div class="landing-category-header">
-                                <div class="landing-category-icon"><i class="fas fa-file-alt"></i></div>
-                                <div>
-                                    <div class="landing-category-title">Documents &amp; PDF</div>
-                                    <div class="landing-category-desc">Generate, merge, split and convert documents</div>
-                                </div>
-                            </div>
-                            <div class="landing-category-tools">
-                                <span class="landing-category-tool" onclick="switchTool('pdf-compress')"><i class="fas fa-file-pdf"></i> PDF Compress</span>
-                                <span class="landing-category-tool" onclick="switchTool('pdf-merge')"><i class="fas fa-object-group"></i> PDF Merge</span>
-                                <span class="landing-category-tool" onclick="switchTool('pdf-split')"><i class="fas fa-scissors"></i> PDF Split</span>
-                                <span class="landing-category-tool" onclick="switchTool('resume-builder')"><i class="fas fa-id-card"></i> Resume Builder</span>
-                                <span class="landing-category-tool" onclick="switchTool('invoice-gen')"><i class="fas fa-file-invoice-dollar"></i> Invoice Gen</span>
-                                <span class="landing-category-tool" onclick="switchTool('markdown-to-pdf')"><i class="fab fa-markdown"></i> MD to PDF</span>
-                                <span class="landing-category-tool" onclick="switchTool('pdf-to-images')"><i class="fas fa-images"></i> PDF to Images</span>
-                            </div>
+                        <div class="landing-feature">
+                            <div class="landing-feature-icon"><i class="fas fa-microchip"></i></div>
+                            <h3>Transparent by design</h3>
+                            <p>Open any tool and check the tag on the right  green means it runs entirely in your browser, purple means it uses our server. No surprises, no hidden uploads.</p>
                         </div>
-                        <div class="landing-category-card cat-dev">
-                            <div class="landing-category-header">
-                                <div class="landing-category-icon"><i class="fas fa-code"></i></div>
-                                <div>
-                                    <div class="landing-category-title">Developer &amp; Utilities</div>
-                                    <div class="landing-category-desc">Browser-based utilities — no uploads, instant results</div>
-                                </div>
-                            </div>
-                            <div class="landing-category-tools">
-                                <span class="landing-category-tool" onclick="switchTool('json-format')"><i class="fas fa-file-code"></i> JSON Format</span>
-                                <span class="landing-category-tool" onclick="switchTool('regex-tester')"><i class="fas fa-asterisk"></i> Regex Tester</span>
-                                <span class="landing-category-tool" onclick="switchTool('diff-checker')"><i class="fas fa-code-compare"></i> Diff Checker</span>
-                                <span class="landing-category-tool" onclick="switchTool('base64')"><i class="fas fa-code"></i> Base64</span>
-                                <span class="landing-category-tool" onclick="switchTool('color-convert')"><i class="fas fa-palette"></i> Color Convert</span>
-                                <span class="landing-category-tool" onclick="switchTool('qr-generate')"><i class="fas fa-qrcode"></i> QR Code</span>
-                                <span class="landing-category-tool" onclick="switchTool('hash-generate')"><i class="fas fa-fingerprint"></i> Hash Gen</span>
-                            </div>
+                        <div class="landing-feature">
+                            <div class="landing-feature-icon"><i class="fas fa-download"></i></div>
+                            <h3>Install as an App</h3>
+                            <p>LumaTools is a Progressive Web App. Install it to your desktop or phone for instant access and a native app experience.</p>
                         </div>
                     </div>
 
                     <div class="landing-tools-overview">
-                        <h2>50+ Tools &mdash; Zero Ads, Zero Tracking</h2>
+                        <h2>50+ Tools, Zero Ads</h2>
                         <div class="landing-tool-chips">
                             <span class="landing-chip" onclick="switchTool('ai-study-notes')"><i class="fas fa-brain"></i> AI Study Notes</span>
                             <span class="landing-chip" onclick="switchTool('ai-flashcards')"><i class="fas fa-clone"></i> Flashcards</span>
@@ -472,15 +419,14 @@
                             <span class="landing-chip" onclick="switchTool('markdown-preview')"><i class="fab fa-markdown"></i> Markdown Preview</span>
                             <span class="landing-chip" onclick="switchTool('diff-checker')"><i class="fas fa-code-compare"></i> Difference Checker</span>
                             <span class="landing-chip" onclick="switchTool('word-counter')"><i class="fas fa-align-left"></i> Word Counter</span>
-                            <span class="landing-chip" onclick="switchTool('csv-json')"><i class="fas fa-table"></i> CSV ↔ JSON</span>
-                            <span class="landing-chip" onclick="switchTool('unix-date')"><i class="fas fa-clock"></i> Unix ↔ Date</span>
+                            <span class="landing-chip" onclick="switchTool('csv-json')"><i class="fas fa-table"></i> CSV &harr; JSON</span>
+                            <span class="landing-chip" onclick="switchTool('unix-date')"><i class="fas fa-clock"></i> Unix &harr; Date</span>
                             <span class="landing-chip" onclick="switchTool('regex-tester')"><i class="fas fa-asterisk"></i> Regex Tester</span>
                             <span class="landing-chip" onclick="switchTool('code-beautify')"><i class="fas fa-indent"></i> Code Beautify</span>
                             <span class="landing-chip" onclick="switchTool('uuid-gen')"><i class="fas fa-id-badge"></i> UUID Generator</span>
                             <span class="landing-chip" onclick="switchTool('url-encode')"><i class="fas fa-link"></i> URL Encoder</span>
                         </div>
                     </div>
-
                     <div class="landing-cta-row">
                         <button class="landing-cta-btn" onclick="switchTool('ai-study-notes')"><i class="fas fa-rocket"></i> Try AI Study Tools</button>
                         <button class="landing-install-btn" id="landingInstallBtn" onclick="installPWA()"><i class="fas fa-download"></i> Install App</button>
