feat: add transcript hint to YouTube Summary URL input

--- a/public/index.html
+++ b/public/index.html
@@ -2154,6 +2154,7 @@
                     <div class="input-group" style="margin-bottom:16px">
                         <label for="youtube-url-input">YouTube Video URL</label>
                         <input type="url" id="youtube-url-input" placeholder="https://www.youtube.com/watch?v=...">
+                        <p class="input-hint"><i class="fas fa-info-circle"></i> The video transcript will be fetched and used to generate a summary.</p>
                     </div>
                     <button class="process-btn" onclick="processYouTubeSummary()"><i class="fas fa-magic"></i> Summarize Video</button>
                     <div class="processing-status hidden" data-tool="youtube-summary">
