feat: add SVG input support to all image tools
- All image upload zone hints now list SVG
- SVG input always routed to server (ffmpeg.wasm lacks librsvg)
- IMAGE_EXTS regex includes svg for correct preview/routing
- mimeFromExt: svg -> image/svg+xml

--- a/public/index.html
+++ b/public/index.html
@@ -592,7 +592,7 @@
                 </div>
                 <div class="tool-body">
                     <div class="upload-zone" id="uz-image-compress" data-accept="image/*" data-max="52428800">
-                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, AVIF, GIF, HEIC &mdash; Max 50 MB</small></div>
+                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, AVIF, GIF, HEIC, SVG &mdash; Max 50 MB</small></div>
                         <input type="file" class="upload-input" accept="image/*">
                     </div>
                     <div class="file-preview hidden" data-tool="image-compress">
@@ -621,7 +621,7 @@
                 </div>
                 <div class="tool-body">
                     <div class="upload-zone" id="uz-image-resize" data-accept="image/*" data-max="52428800">
-                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, AVIF, GIF, HEIC &mdash; Max 50 MB</small></div>
+                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, AVIF, GIF, HEIC, SVG &mdash; Max 50 MB</small></div>
                         <input type="file" class="upload-input" accept="image/*">
                     </div>
                     <div class="file-preview hidden" data-tool="image-resize">
@@ -654,7 +654,7 @@
                 </div>
                 <div class="tool-body">
                     <div class="upload-zone" id="uz-image-convert" data-accept="image/*" data-max="52428800">
-                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, ICO, AVIF, GIF, HEIC &mdash; Max 50 MB</small></div>
+                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, ICO, AVIF, GIF, HEIC, SVG &mdash; Max 50 MB</small></div>
                         <input type="file" class="upload-input" accept="image/*">
                     </div>
                     <div class="file-preview hidden" data-tool="image-convert">
@@ -691,7 +691,7 @@
                 </div>
                 <div class="tool-body">
                     <div class="upload-zone" id="uz-image-watermark" data-accept="image/*" data-max="52428800">
-                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, AVIF, GIF, HEIC &mdash; Max 50 MB</small></div>
+                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, AVIF, GIF, HEIC, SVG &mdash; Max 50 MB</small></div>
                         <input type="file" class="upload-input" accept="image/*">
                     </div>
                     <div class="file-preview hidden" data-tool="image-watermark">
@@ -1570,7 +1570,7 @@
                 </div>
                 <div class="tool-body">
                     <div class="upload-zone" id="uz-image-crop" data-accept="image/*" data-max="52428800">
-                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, AVIF, GIF, HEIC &mdash; Max 50 MB</small></div>
+                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, AVIF, GIF, HEIC, SVG &mdash; Max 50 MB</small></div>
                         <input type="file" class="upload-input" accept="image/*">
                     </div>
                     <div class="file-preview hidden" data-tool="image-crop">
@@ -1644,7 +1644,7 @@
                 </div>
                 <div class="tool-body">
                     <div class="upload-zone" id="uz-image-bg-remove" data-accept="image/*" data-max="52428800">
-                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, AVIF, GIF, HEIC &mdash; Max 50 MB</small></div>
+                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your image here</p><span>or click to browse</span><small>PNG, JPEG, WebP, BMP, TIFF, AVIF, GIF, HEIC, SVG &mdash; Max 50 MB</small></div>
                         <input type="file" class="upload-input" accept="image/*">
                     </div>
                     <div class="file-preview hidden" data-tool="image-bg-remove">
