chore: update Discord/OG embed meta tags for accuracy and modern copy
- Title: All-in-One Browser Toolkit (was Universal Media Toolkit)
- Description: mentions AI study tools, flashcards, 40+ tools, browser processing
- Added og:image:alt, og:site_name ordering, SEO meta name/keywords/author
- Removed outdated 'media toolkit' framing
- Preserved favicon links and theme-color

--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luma Tools — Universal Media Toolkit</title>
+    <title>Luma Tools — All-in-One Browser Toolkit</title>
+
+    <!-- SEO -->
+    <meta name="description" content="40+ free tools for AI study notes, flashcards, media download, image editing, video processing, audio conversion, PDF tools and more. Most tools run entirely in your browser — no upload, no account needed.">
+    <meta name="keywords" content="luma tools, image compress, video convert, PDF tools, AI study notes, flashcards, media downloader, browser tools, free online tools">
+    <meta name="author" content="Luma">
 
     <!-- Discord / Open Graph embed -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tools.lumaplayground.com">
-    <meta property="og:title" content="Luma Tools">
-    <meta property="og:description" content="Free online media toolkit — download videos, convert images, compress PDFs and 20+ more tools.">
+    <meta property="og:site_name" content="Luma Tools">
+    <meta property="og:title" content="Luma Tools — All-in-One Browser Toolkit">
+    <meta property="og:description" content="40+ free tools — AI study notes &amp; flashcards, media downloader, image editing, video &amp; audio conversion, PDF tools and more. Most processing happens right in your browser.">
     <meta property="og:image" content="https://tools.lumaplayground.com/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:site_name" content="Luma Tools">
+    <meta property="og:image:alt" content="Luma Tools — 40+ free browser-based tools">
     <meta name="theme-color" content="#7c5cff">
+
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="alternate icon" type="image/png" href="/favicon.png">
+
+    <!-- Twitter / X card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Luma Tools — Universal Media Toolkit">
-    <meta name="twitter:description" content="Free online media toolkit — download videos, convert images, compress PDFs and 20+ more tools.">
+    <meta name="twitter:title" content="Luma Tools — All-in-One Browser Toolkit">
+    <meta name="twitter:description" content="40+ free tools — AI study notes &amp; flashcards, media downloader, image editing, video &amp; audio conversion, PDF tools and more. Most processing happens right in your browser.">
     <meta name="twitter:image" content="https://tools.lumaplayground.com/og-image.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
