--- a/public/index.html
+++ b/public/index.html
@@ -235,6 +235,9 @@
                     <a class="nav-item" data-tool="hash-generate" data-location="server" onclick="switchTool('hash-generate')">
                         <i class="fas fa-fingerprint"></i><span>Hash Generator</span>
                     </a>
+                    <a class="nav-item" data-tool="archive-extract" data-location="server" onclick="switchTool('archive-extract')">
+                        <i class="fas fa-box-open"></i><span>Archive Extractor</span>
+                    </a>
                     <a class="nav-item" data-tool="base64" data-location="browser" onclick="switchTool('base64')">
                         <i class="fas fa-code"></i><span>Base64</span>
                     </a>
@@ -1423,6 +1426,36 @@
                     <button class="process-btn" onclick="processFile('hash-generate')"><i class="fas fa-fingerprint"></i> Generate Hashes</button>
                     <div class="processing-status hidden" data-tool="hash-generate"><div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div><span>Processing...</span></div>
                     <div class="hash-results hidden" id="hashResults"></div>
+                </div>
+            </div>
+
+            <!-- ── ARCHIVE EXTRACTOR ──────────────────────────────────────── -->
+            <div class="tool-panel" id="tool-archive-extract">
+                <div class="tool-header">
+                    <h2><i class="fas fa-box-open"></i> Archive Extractor</h2>
+                    <p>Extract any archive format and download all contents as a ZIP.</p>
+                </div>
+                <div class="tool-body">
+                    <div class="upload-zone" id="uz-archive-extract"
+                        data-accept=".zip,.7z,.rar,.tar,.gz,.bz2,.xz,.tgz,.tbz2,.txz,.cab,.iso,.lzh,.arj,.z,.lzma,.zst,.apk,.jar,.war,.ear,.whl,.egg,.nupkg,.crx,.xpi,.cbz,.cbr,.appx,.msix,.deb,.rpm,.dmg,.wim,.msi,.img,.pkg"
+                        data-max="524288000">
+                        <div class="upload-zone-content">
+                            <i class="fas fa-box-open"></i>
+                            <p>Drag &amp; drop your archive here</p>
+                            <span>or click to browse</span>
+                            <small>ZIP &bull; 7Z &bull; RAR &bull; TAR &bull; GZ &bull; BZ2 &bull; XZ &bull; ISO &bull; CAB &bull; LZH &bull; APK &bull; JAR &bull; DEB &bull; RPM &bull; DMG &bull; WIM &bull; CBZ &bull; CBR &bull; and more &mdash; Max 500 MB</small>
+                        </div>
+                        <input type="file" class="upload-input" accept=".zip,.7z,.rar,.tar,.gz,.bz2,.xz,.tgz,.tbz2,.txz,.cab,.iso,.lzh,.arj,.z,.lzma,.zst,.apk,.jar,.war,.ear,.whl,.egg,.nupkg,.crx,.xpi,.cbz,.cbr,.appx,.msix,.deb,.rpm,.dmg,.wim,.msi,.img,.pkg">
+                    </div>
+                    <div class="file-preview hidden" data-tool="archive-extract">
+                        <div class="file-info"><i class="fas fa-file-archive"></i><div><span class="file-name"></span><span class="file-size"></span></div></div>
+                        <button class="file-remove" onclick="removeFile('archive-extract')"><i class="fas fa-times"></i></button>
+                    </div>
+                    <button class="process-btn" onclick="processFile('archive-extract')"><i class="fas fa-box-open"></i> Extract Archive</button>
+                    <div class="processing-status hidden" data-tool="archive-extract">
+                        <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
+                        <span>Extracting archive&hellip;</span>
+                    </div>
                 </div>
             </div>
 
