--- a/public/index.html
+++ b/public/index.html
@@ -425,6 +425,7 @@
                             <span class="landing-chip" onclick="switchTool('invoice-gen')"><i class="fas fa-file-invoice-dollar"></i> Invoice Generator</span>
                             <span class="landing-chip" onclick="switchTool('qr-generate')"><i class="fas fa-qrcode"></i> QR Code</span>
                             <span class="landing-chip" onclick="switchTool('hash-generate')"><i class="fas fa-fingerprint"></i> Hash Generator</span>
+                            <span class="landing-chip" onclick="switchTool('archive-extract')"><i class="fas fa-box-open"></i> Archive Extractor</span>
                             <span class="landing-chip" onclick="switchTool('base64')"><i class="fas fa-code"></i> Base64</span>
                             <span class="landing-chip" onclick="switchTool('json-format')"><i class="fas fa-file-code"></i> JSON Formatter</span>
                             <span class="landing-chip" onclick="switchTool('color-convert')"><i class="fas fa-palette"></i> Color Converter</span>
