fix+refactor: archive download, filter buttons, flashcard confidence UI
Fixes:
- Archive extractor: add missing result-section div so showResult() can
  find the download element and trigger the file download
- Filter by topic: replace JSON.stringify() in onclick attribute with
  data-tag + this.dataset.tag approach; double-quotes from JSON.stringify
  broke the HTML attribute and silently prevented the click handler firing

Flashcard UX:
- Confidence rating now only appears after flipping the card; front side
  shows 'Click the card to reveal the answer - then rate yourself' hint
- Filter pills: higher-contrast background (rgba white instead of --bg-secondary)
  so they're clearly readable against the page background
- Confidence buttons: grid layout replacing flex; each button has a
  coloured bottom bar (green/orange/red) visible at rest via ::after pseudo;
  hover lifts the button and makes the bar fully opaque; active state adds
  a coloured glow (box-shadow); looks more intentional and distinct

--- a/public/index.html
+++ b/public/index.html
@@ -1457,6 +1457,10 @@
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
                         <span>Extracting archive&hellip;</span>
                     </div>
+                    <div class="result-section hidden" data-tool="archive-extract">
+                        <div class="result-info"><i class="fas fa-check-circle"></i><div><span class="result-name"></span><span class="result-size"></span></div></div>
+                        <a class="result-download" download><i class="fas fa-download"></i> Download ZIP</a>
+                    </div>
                 </div>
             </div>
 
