feat: quiz partial-submit confirm + disabled sidebar fix + admin discord logs
Quiz partial-submit confirm modal:
- submitQuiz() no longer blocks with a toast; instead it opens a
  quiz-confirm-backdrop modal that lists the unanswered question
  numbers (by display order) and offers Go Back / Submit Anyway
- confirmSubmitQuiz() / closeQuizConfirmModal() / doSubmitQuiz() split
  logic cleanly; Escape also closes the modal
- CSS: amber-themed qcm modal matching site dark theme with blur backdrop

Disabled tool sidebar:
- CSS now also targets a.nav-item[data-disabled='true'] directly so
  any nav item with that attribute is greyed out (opacity 0.38,
  not-allowed cursor) without needing JS to add a class
- Disabled-tool modal backdrop blur increased to 6px, red accent border
  added to the modal card for better visual hierarchy

Admin panel Discord logging:
- POST /api/admin/tools/:id now snapshots old config before patching,
  builds a human-readable diff (enabled toggle, rate limit, max file,
  max chars, note), and fires discord_log with amber colour 0xF59E0B
- Log shows tool_id, admin IP, and exactly what changed
- 'No changes' is shown if Save is clicked without any edits

--- a/public/index.html
+++ b/public/index.html
@@ -2494,6 +2494,20 @@
         <div class="drop-overlay-hint">Release to choose a tool for your file</div>
     </div>
 
+    <!-- Quiz partial-submit confirm modal -->
+    <div class="quiz-confirm-backdrop" id="quizConfirmBackdrop">
+        <div class="quiz-confirm-modal">
+            <div class="qcm-icon"><i class="fas fa-exclamation-triangle"></i></div>
+            <h3>Submit with unanswered questions?</h3>
+            <div class="qcm-body">You haven't answered all of the questions.</div>
+            <div class="qcm-unanswered" id="qcmUnansweredList"></div>
+            <div class="qcm-actions">
+                <button class="qcm-cancel" onclick="closeQuizConfirmModal()"><i class="fas fa-arrow-left"></i> Go Back</button>
+                <button class="qcm-submit" onclick="confirmSubmitQuiz()"><i class="fas fa-check-circle"></i> Submit Anyway</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Disabled-tool modal -->
     <div class="disabled-tool-backdrop" id="disabledToolBackdrop" onclick="closeDisabledModal(event)">
         <div class="disabled-tool-modal">
